# avcheck

./: .gitignore  LICENSE  README.md  avcheck_evaluation.json  pyproject.toml  setup.py
.github/workflows/: ci.yml
avcheck/: cli.py  native_filter.py
avcheck/audio/: integrity.py
avcheck/evaluate/: detectors.py  evaluation.py  matching.py
avcheck/inject/: audio_defects.py  desync.py  engine.py  media_io.py  video_defects.py
avcheck/triage/: report.py
avcheck/video/: plotting.py  quality.py
native/: bindings.cpp  tone_curve.cpp  tone_curve.hpp
scripts/: benchmark_native.py  e2e_demo.py
tests/: conftest.py  test_audio_integrity.py  test_cli_audio.py  test_cli_evaluate.py  test_cli_inject.py  test_cli_triage.py  test_cli_video.py  test_evaluate_detectors.py  test_evaluate_evaluation.py  test_evaluate_matching.py  test_inject_audio_defects.py  test_inject_engine.py  test_inject_video_defects.py  test_native_tone_curve.py  test_triage_report.py  test_video_quality.py
