[build-system]
requires = ["setuptools>=68", "pybind11>=2.10"]
build-backend = "setuptools.build_meta"

[project]
name = "avcheck"
version = "0.1.0"
description = "Automated audio/video validation toolkit that detects and explains media quality defects"
requires-python = ">=3.9"
dependencies = [
    "librosa",
    "numpy",
    "opencv-python",
    "scikit-image",
    "ffmpeg-python",
    "matplotlib",
    "pybind11",
    "anthropic",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "soundfile"]

[project.scripts]
avcheck = "avcheck.cli:main"

[tool.setuptools.packages.find]
include = ["avcheck*"]
